# django3-postgres-docker

./: .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
apps/users/: views.py
sweam/: asgi.py  settings.py  urls.py  wsgi.py
