[tool.poetry]
name = "sweam"
version = "0.1.0"
description = "ecommerce shop for games and applications"
authors = ["semen emelianov <semen.emelianov@simbirsoft.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = ">=3"
uvicorn = "^0.11.1"
dj-database-url = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
